--- a/football-steps-api/package.json
+++ b/football-steps-api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --passWithNoTests",
-    "dev": "nodemon --trace-deprecation index.js "
+    "dev": "nodemon --trace-deprecation index.js ",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
