--- a/football-steps-simulations/package.json
+++ b/football-steps-simulations/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --passWithNoTests",
-    "dev": "nodemon index.js --trace-deprecation"
+    "dev": "nodemon index.js --trace-deprecation",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
