--- a/football-steps-api/Dockerfile
+++ b/football-steps-api/Dockerfile
@@ -8,4 +8,4 @@ COPY --chown=node:node package.json .
 RUN npm install
 COPY --chown=node:node . .
 
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "dev"]
