--- a/football-steps-simulations/Dockerfile
+++ b/football-steps-simulations/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR '/home/node/app'
 COPY --chown=node:node package.json .
 RUN npm install
 RUN npm install express --save
+RUN npm install nodemon --save-dev
 
 COPY --chown=node:node . .
 
