--- a/football-steps-api/package.json
+++ b/football-steps-api/package.json
@@ -21,9 +21,9 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
-    "node-fetch": "^2.6.1",
     "node-pre-gyp": "^0.17.0",
-    "redis": "4.0.0"
+    "redis": "4.0.0",
+    "cors": "2.8.4"
   },
   "devDependencies": {
     "jest": "^26.6.3",
