--- a/kubernetes/api-deployment.yaml
+++ b/kubernetes/api-deployment.yaml
@@ -19,7 +19,7 @@ spec:
             - containerPort: 4000
           env:
             - name: REDIS_HOST
-              value: redis-api-cache
+              value: api-redis-cluster-ip-service
             - name: REDIS_PORT
               value: '6379'
             - name: MONGO_USER
