--- a/football-steps-simulations/package.json
+++ b/football-steps-simulations/package.json
@@ -22,7 +22,8 @@
     "node-fetch": "^2.6.1",
     "axios": "0.24.0",
     "redis": "4.0.0",
-    "helmet": "5.0.2"
+    "helmet": "5.0.2",
+    "cors": "2.8.4"
   },
   "devDependencies": {
     "jest": "^26.6.3",
